--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"); */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,700;1,500&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -12,16 +11,14 @@
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
-} 
-
+  font-family: "Red Hat Display", sans-serif;
+}
 
 .bg-gradient-1 {
   background: linear-gradient(to right, #2ca993, #a9592c);
   filter: blur(300px);
   position: absolute;
   z-index: -10;
-  /* height: 100%; */
 }
 
 .overlay {
@@ -37,23 +34,10 @@ body {
   align-items: center;
 }
 
-
-/* body {
-  font-family: "Roboto", sans-serif;
-} */
-
-/* @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
-
-body {
-  font-family: 'Lato', sans-serif;
+@media (max-width: 767px) {
+  #splide {
+    --splide-per-page: 2;
+  }
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
 
-body {
-  font-family: 'Source Sans Pro', sans-serif;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
-
-*/
